--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch index.js",
-    "start": "node index.js"
+    "dev": "node --watch server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.4",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "postgres": "^3.4.3",
+    "xss-clean": "^0.1.4"
   }
 }
