--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.4",
+    "express-session": "^1.17.3",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "postgres": "^3.4.3",
     "xss-clean": "^0.1.4"
   }
